🐛 Fixed Daily Word: H1 & H2 overlapping

--- a/client/src/style/app.scss
+++ b/client/src/style/app.scss
@@ -19,7 +19,7 @@ h2 {
   text-transform: uppercase;
   letter-spacing: $spacing-xs;
   font-size: 2.5vw;
-  margin-top: -10px;
+  margin-top: 0px;
   color: $secondary-color;
 }
 
